--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -32,3 +32,11 @@ jobs:
     - name: Run Tests
       working-directory: ${{ steps.vars.outputs.build-dir }}
       run: ctest --build-config Release
+
+    - name: Upload build artifacts
+      uses: actions/upload-artifact@v4
+      with:
+        name: windows-build
+        path: ${{ steps.vars.outputs.build-dir }}/Release/**
+        if-no-files-found: error
+        retention-days: 1
