--- a/.github/workflows/cmake-windows-x86.yml
+++ b/.github/workflows/cmake-windows-x86.yml
@@ -7,7 +7,7 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build-windows-x86:
+  build-windows_x86:
     runs-on: windows-latest
 
     steps:
@@ -36,6 +36,6 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: windows-x86-build
-        path: build/Release/**
+        path: bin/Release/**
         if-no-files-found: error
         retention-days: 64
